# CorpusRAG

./: .env.example  .gitignore  README.md  _fix_auth.py  clean_files.ps1  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  transs.ps1
.claude/: settings.local.json
.docker/: Dockerfile  compose.yaml  docker-compose.dev.yml  docker-compose.yml  healthcheck.py  otel-collector-config.yaml  requirements.txt
.docs/plans/: audit.md  plan_01.md
.github/workflows/: ci.yml
.opencode/: improvement_plan_02.md
.opencode/old_arch_plans/: learning_workflow_refined.md  local_ai_workflow_refined.md  refactoring_summary.md
.opencode/plans/: README.md
.opencode/plans/arch/: plan_1.md  plan_2.md  plan_3.md
.opencode/security/: security-audit-001.md  security-audit-002.md
.opencode/skills/security_audit/: SKILL.md
.sessions/: session_20260416_233905.json  session_20260502_140957.json
chroma_store/: chroma.sqlite3
configs/: .env.example  base.example.yaml  base.yaml  corpus_callosum.docker.yaml.example  corpus_callosum.yaml.example  docker.yaml.example
docs/: Learning Workflow.md  Local AI Workflow.md  docker-deployment.md  mcp-integration.md  production-deployment.md  troubleshooting.md
docs/audits/: security_audit_001.md
docs/phases/: PHASE5_README.md
docs/plans/: implementation-status.md  plan_01.md  plan_1.md  plan_2.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md  plan_7.md  remediation-roadmap.md  security-audit-003.md
docs/plans/plan_10/: PARALLEL-WORK.md  plan.md  sprint_1.md
docs/plans/plan_11/: PARALLEL-WORK.md  plan.md
docs/plans/plan_12/: PARALLEL-WORK.md  (+3 more)
homeschool/: __init__.py  __main__.py  config.py  generate_compose_env.py  sync.py  transaction.py
parent_store/: 004b39a5-4eac-400f-89e4-2c4c9ef5ea87.json  01d9a02b-bff8-4cb8-a70b-9d29c6749c4b.json  024cb26a-3a14-4567-8383-bd8b42ba0316.json  031627f4-dacf-44b5-a665-6555a7f7d93c.json  042b4f05-be24-4255-b083-b637f9255715.json  05cd7708-b6a6-4f92-bf99-7b47871e7357.json  0727db6a-a6d6-449f-8229-158995a281ad.json  07491f77-9b64-48b2-8cea-72352355cece.json  08fd97b3-8a8d-4d16-849f-b13a9b29d9b8.json  0ca3ebf3-a997-4e44-97c3-5b101fee5e8d.json  0cb1744c-e681-4e40-9bc8-48d3ffac766c.json  0cdbfd62-58f0-41f9-b056-08fc45f54dac.json  0f1e70a2-b64c-4773-997a-7725954ab2d7.json  0f3d7e8e-b9a9-4c44-b3e7-cc79c83f9c9c.json  1264c0b4-7a87-4a35-a54a-89450db9ba4e.json  15010d62-1229-4094-a044-1e695cebb814.json  15a86f92-4bb1-4165-9188-28a6fda0804a.json  15a97e58-6a43-4472-8e6f-f46ceaa12784.json  15fe148e-6bc9-46cd-95b4-4807c04b9057.json  17ae9628-08d7-48ee-b020-befc528eae5a.json  1856ee10-f86b-49ba-9ed9-bf2fa45884fd.json  18816519-501d-4b20-9976-aa8efd9c8a38.json  1960f699-d774-48bc-9c18-dc2279dff003.json  1b4d0d25-0ec7-4ff1-a5ef-d2b4ba97fe69.json  1bc63165-b46a-433e-a363-6fb390355128.json  1e2d6083-7e36-4904-98e8-52cf2c75419a.json  1e4fa59e-3a2d-4464-82f2-90393539f6e4.json  1f7f5a9e-064c-431e-ac74-f20243ea30ba.json  1fce85c7-7ace-4e42-93ed-94f6f4a30667.json  20f469f2-ede1-4da5-9309-9073b2df2d44.json  216b9909-2b79-4259-a039-5d6c56e91622.json  22563a40-98ef-47e7-a992-07d389bb247c.json  23a580cf-eb96-4e21-bf97-2e92f8de18fa.json  253f0d0b-8206-4a78-bb7a-af97b96275ec.json  25effc6f-25ba-4576-8089-a6bcd3cab565.json  26b7cc45-9da7-46b6-aa04-74e9a00e3c77.json  271eed2c-ece0-4878-a8ea-802488cfb7ea.json  27396a9c-bd98-4369-8b1b-c2050e04fb78.json  284fca77-bbf8-4a73-9e40-4c8ec6bcdc3a.json  2a082145-7359-47ff-ac5e-7dc9361b98d6.json  (+217 more)
scratch/: rag_smoke.txt
scripts/: lint_and_format.py  ollama_ps.ps1
src/: CLI.md  __init__.py  cli.py  cli_common.py  cli_dev.py  cli_lazy.py  requirements.txt  setup_wizard.py
src/config/: __init__.py  base.py  loader.py  schema.py
src/corpus_callosum/: __init__.py  __main__.py  agent.py  api.py  chroma.py  config.py  convert.py  embeddings.py  ingest.py  llm_backends.py  memory.py  metrics.py  observability.py  retriever.py  security.py  setup.py
src/db/: __init__.py  base.py  chroma.py  collections_cli.py  management.py  models.py
src/llm/: __init__.py  backend.py  config.py  prompts.py  response.py
src/mcp_server/: README.md  __init__.py  middleware.py  profiles.py  server.py
src/orchestrations/: __init__.py  cli.py  knowledge_base.py  lecture_pipeline.py  study_session.py
src/utils/: __init__.py  auth.py  benchmarking.py  manage_keys.py  manage_secrets.py  rate_limiting.py  secrets.py  security.py  telemetry.py  tokens.py  validation.py
tests/: test_agent.py  test_agent_context_filtering.py  test_api.py  test_benchmarking.py  test_collections_cli.py  test_config.py  test_convert.py  test_dead_code_removal.py  test_imports.py  test_ingest.py  test_llm_backends.py  test_mcp_tools.py  test_observability.py  test_optional_extras.py  test_retriever.py  test_security.py  test_security_storage.py  test_security_validation.py  test_session_checksum.py  test_session_inclusion.py  test_slash_commands.py  test_slash_commands_context.py  test_smoke.py  test_strategies.py  test_sync.py  test_tag_parser.py  test_tui_chat_message.py  test_tui_collections.py  test_ux_improvements.py
tests/db/: test_zip_slip.py
tests/integration/: test_database.py  test_generators.py  test_llm_integration.py  test_mcp_stdio.py  test_rag_integration.py
tests/live/: conftest.py  test_chromadb.py  test_ollama.py  test_rag_pipeline.py
tests/security/: test_prompt_injection.py  test_rate_limiting.py  test_yaml_security.py
tests/unit/: test_adaptive_splitter.py  test_classifier.py  test_cli.py  test_config.py  test_docker_slim.py  test_download.py  test_extractor.py  test_ingest.py  test_jobs.py  test_llm_rate_limiting.py  test_mcp_common.py  test_mcp_dev_tools.py  test_mcp_learn_tools.py  test_mcp_middleware.py  test_mcp_profiles.py  test_mcp_server.py  test_mcp_video.py  test_message_metadata.py  test_ocr.py  test_orchestrations.py  test_postprocessor.py  test_prompt_security.py  test_rag_cli.py  test_rag_components.py  test_setup_wizard_config.py  test_storage_security.py  test_telemetry.py  test_tokens.py  test_tools.py  test_tui_context.py  test_video_cli.py  test_video_config.py
(+139 files in other folders)
