[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corpusrag"
version = "0.5.0"
description = "Unified learning and knowledge management toolkit with RAG, flashcards, and video transcription"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "chromadb>=1.0.20",
  "sentence-transformers>=3.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "pypdf>=5.1.0",
  "click>=8.1.0",
  "ollama>=0.4.0",
  "mcp[cli]>=1.20.0",
  # LangChain dependencies for RAG pipeline
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.2.0",
  # Security dependencies
  "keyring>=25.0.0",
  "cryptography>=41.0.0",
  "rank_bm25>=0.2.2",
  "rich>=13.7.0",
  "textual>=0.50.0",
  "transformers>=4.38.0",
  "huggingface-hub>=0.20.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
]

[project.optional-dependencies]
# Generators (flashcards, summaries, quizzes)
generators = [
  "tiktoken>=0.5.0",
]

# Server-only (slim Docker image -- no torch, no local embeddings)
server = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "chromadb>=1.0.20",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "pypdf>=5.1.0",
  "click>=8.1.0",
  "ollama>=0.4.0",
  "mcp[cli]>=1.20.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.2.0",
  "keyring>=25.0.0",
  "cryptography>=41.0.0",
  "rank_bm25>=0.2.2",
  "rich>=13.7.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "huggingface-hub>=0.20.0",
]

# Video transcription
video = [
  "faster-whisper>=1.0.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
]

# Handwriting ingestion
handwriting = [
  "ollama>=0.1.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
]

# Full installation (all features)
full = [
  "corpusrag[generators]",
  "corpusrag[video]",
  "corpusrag[observability]",
  "corpusrag[export]",
]

# Development tools
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.0",
]

# Observability (telemetry, tracing)
observability = [
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp>=1.20.0",
  "opentelemetry-instrumentation-fastapi>=0.41b0",
  "opentelemetry-instrumentation-httpx>=0.41b0",
  "traceloop-sdk>=0.3.0",
]

# Export support (Anki, etc.)
export = [
  "genanki>=0.13.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "cli_common", "cli_dev", "setup_wizard"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# Unified CLI (cross-platform entry point)
corpus = "cli:main"

# MCP Server
corpus-mcp-server = "mcp_server.server:main"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors (syntax and whitespace)
  "W",      # pycodestyle warnings
  "F",      # Pyflakes (undefined names, duplicate imports)
  "I",      # isort (import sorting)
]
ignore = [
  "E501",   # line too long (handled by Black formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/test_smoke.py" = ["E402"]  # imports after sys.path manipulation
"src/tools/rag/retriever.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["config", "db", "llm", "mcp_server", "orchestrations", "tools", "utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
  "chromadb.*",
  "sentence_transformers.*",
  "rank_bm25.*",
  "httpx.*",
  "opentelemetry.*",
  "openllmetry.*",
  "docx.*",
  "bs4.*",
  "markdownify.*",
  "striprtf.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = ["live: tests requiring running ChromaDB and Ollama"]
addopts = "-v --tb=short -m 'not live'"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.deptry]
package_module_name_map = { "huggingface-hub" = "huggingface_hub", "faster-whisper" = "faster_whisper" }
# Tell deptry these are local modules, not external libraries
known_first_party = [
  "db", 
  "tools", 
  "utils", 
  "config", 
  "orchestrations", 
  "cli_common", 
  "cli_dev", 
  "setup_wizard", 
  "llm"
]

[tool.deptry.per_rule_ignores]
# Ignore 'obsolete' (DEP002) warnings for CLI/infra tools
DEP002 = ["uvicorn", "python-dotenv", "ollama", "langchain", "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp", "opentelemetry-instrumentation-fastapi", "opentelemetry-instrumentation-httpx", "traceloop-sdk"]

[tool.uv]
python-preference = "managed"
